<resources>
    <string name="app_name">AWARE: Sensory Wristband</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="zeroHeartRate">0 bmp</string>
    <string name="batteryLevel">Battery Level</string>
    <string name="batteryZeroLevel">0%</string>
    <string name="signalStrength">Signal Strength</string>
    <string name="steps">Steps</string>
    <string name="zeroSteps">0</string>
    <string name="distance">Distance</string>
    <string name="zeroDistance">0 m</string>
    <string name="calories">Calories</string>
    <string name="zeroCalorie">0 kcal</string>
    <string name="bandWrongPosition">Band is in wrong position. Wear band tightly above the wrist and try again.</string>

    <string-array name="heart_rate_frequency_labels">
        <item>1 hour</item>
        <item>30 minutes</item>
        <item>15 minutes</item>
        <item>10 minutes</item>
        <item>5 minutes</item>
        <item>0 minutes</item>
    </string-array>

    <integer-array name="heart_rate_frequency_values">
        <item>3600000</item>
        <item>1800000</item>
        <item>900000</item>
        <item>600000</item>
        <item>300000</item>
        <item>0</item>
    </integer-array>

    <string name="deviceName">Name</string>
    <string name="deviceUuid">Uuid\'s</string>
    <string name="deviceAddress">Address</string>
    <string name="deviceType">Type</string>
    <string name="deviceBondState">Bond State</string>
    <string name="deviceBluetoothClass">Bluetooth Class</string>
    <string name="startScan">Scan for devices nearby</string>
    <string name="stopScan">Stop scan</string>
    <string name="disconnectDevice">Disconnect device</string>
    <string name="saveUserSettings">Save user settings</string>
    <string name="name">Name</string>
    <string name="height">Height (CM)</string>
    <string name="weight">Weight (KG)</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="save">Save</string>
    <string name="disconnect">Disconnect</string>
    <string name="alertMessage">Message Alert</string>
    <string name="alertPhoneCall">Phone Call Alert</string>
    <string name="alertVibrate">Vibrate Only Alert</string>
    <string name="measureHeartRate">Measure Heart Rate</string>
    <string name="startStep">Start Step Count</string>
    <string name="starSensor">Start Sensor Notification</string>
    <string name="sensorInfo">[index: ; d1: ; d2: ; d3: ]</string>
</resources>
