<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aware.plugin.sensory_wristband.activities.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/signalStrength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rssiTextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/batteryTextView" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/alertMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alertMessageButton"
                android:layout_weight="1" />

            <Button
                android:text="@string/alertPhoneCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alertPhoneCallButton"
                android:layout_weight="1" />

            <Button
                android:text="@string/alertVibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alertVibrateButton"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/measureHeartRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startHearRateButton"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/heartRateTextView"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/startStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startStepButton"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stepsTextView"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/starSensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startSensorButton"
                android:layout_weight="1" />

            <TextView
                android:text="@string/sensorInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sensorTextView"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:text="@string/disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/disconnectButton" />

        <Button
            android:text="Battery Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/batteryButton" />

        <Button
            android:text="Rssi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rssiButton" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <Button
                android:text="read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/readButton"
                android:layout_weight="1" />

            <Button
                android:text="write"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/writeButton"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
