<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/rssi_0"
        android:id="@+id/rssiImageView"
        android:contentDescription="@string/signalStrength"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/battery_level_0"
        android:id="@+id/batteryImageView"
        android:contentDescription="@string/batteryLevel"
        android:layout_margin="10dp"
        android:layout_toStartOf="@id/rssiImageView"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rssiImageView"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/heartbeat"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:drawablePadding="10dp"
            android:text="@string/zeroHeartRate"
            android:id="@+id/heartRateTextView"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:layout_weight="1"/>

        <TextView
            android:text="@string/zeroSteps"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/steps"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:drawablePadding="10dp"
            android:id="@+id/stepsTextView"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:layout_weight="2" />

    </LinearLayout>

</RelativeLayout>